# school-management

./: .gitignore  .yo-rc.json  README.md  jhipster-jdl (20).jdl  jhipster-jdl (21).jdl  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.pyhipster/: AdministrativeBoard.json  Administrator.json  Analytics.json  Announcement.json  Article.json  Assignment.json  Attendance.json  BoardMember.json  Branch.json  Certification.json  ClassSession.json  Classroom.json  Comment.json  Course.json  CourseEnrollment.json  Discussion.json  Exam.json  Feedback.json  Grade.json  Invoice.json  LearningMaterial.json  Lesson.json  LiveSession.json  Message.json  Notification.json  Payment.json  Person.json  ProgressReport.json  Question.json  Quiz.json  Recommendation.json  Resource.json  Role.json  RoleAssignment.json  School.json  Student.json  Subject.json  Submission.json  SubscriptionDSet.json  SubscriptionPlan.json  (+3 more)
src/main/docker/: app.yml  jhipster-control-center.yml  monitoring.yml  mysql.yml  sonar.yml
src/main/docker/jib/: entrypoint.sh
src/main/python/: Alimran_student_managmentApp.py
src/main/python/config/: BaseConfig.py  FakeDataLoader.py
src/main/python/domain/: AdministrativeBoard.py  Administrator.py  Analytics.py  Announcement.py  Article.py  Assignment.py  Attendance.py  BoardMember.py  Branch.py  Certification.py  ClassSession.py  Classroom.py  Comment.py  Course.py  CourseEnrollment.py  Discussion.py  Exam.py  Feedback.py  Grade.py  Invoice.py  LearningMaterial.py  Lesson.py  LiveSession.py  Message.py  Notification.py  Payment.py  Person.py  ProgressReport.py  Question.py  Quiz.py  Recommendation.py  Resource.py  Role.py  RoleAssignment.py  School.py  Student.py  Subject.py  Submission.py  SubscriptionDSet.py  SubscriptionPlan.py  (+4 more)
src/main/python/rest/: AccountResource.py  AdministrativeBoardResource.py  AdministratorResource.py  (+46 more)
src/main/webapp/: index.html  manifest.webapp
src/test/python/: conftest.py
webpack/: webpack.dev.js
(+556 files in other folders)
